@@ -1,3 +1,8 @@
+2003-07-16  Gary Thomas  <gary@mlbassoc.com>
+
+	* host/rawether.c: Change error reporting to use standard 'strerror()' 
+	function since the use of sys_errlist[] is depricated.
+
 2003-07-09  Bart Veer  <bartv@ecoscentric.com>
 
 	* host/Makefile.am: add a dummy install-data-hook if not
